--- a/07_peticiones_y_respuestas.ipynb
+++ b/07_peticiones_y_respuestas.ipynb
@@ -99,21 +99,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from django.http import HttpResponse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "help(HttpResponse)"
+    "### Atributos de la clase *django.http.HttpResponse*.\n",
+    "\n",
+    "* *content*\n",
+    "* *charset*\n",
+    "* *status_code*\n",
+    "* *reason_phrase*\n",
+    "* *streaming*\n",
+    "* *closed*"
    ]
   },
   {
