--- a/12a_operaciones_con_http.ipynb
+++ b/12a_operaciones_con_http.ipynb
@@ -20,9 +20,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El paquete *django.http* cuenta con herramientas diseñadas para gestionar las peticiones y repuestas más comunes de *HTTP*, incluyendo algunos mensajes de estado.\n",
+    "## Notas preliminares sobre el capítulo 12.\n",
     "\n",
-    "Debido a que *Django* se apega al modelo *MVT*, los recursos de este módulo están diseñados para desplegar aplicaciones basadas en páginas web. Sin embargo, en este capítulo se hará énfasis en aplicaciones enfocasdas en servicios web con *JSON*.\n",
+    "Este capítulo está dividido en dos notebooks:\n",
+    "\n",
+    "* La parte teórica y del servidor, corresponde al presente documento.\n",
+    "* La parte del cliente, corresponde a la notebook [12b_cliente_operaciones_con_http.ipynb](12b_cliente_operaciones_con_http.ipynb).\n",
+    "\n",
+    "La notebook del cliente consume los recursos que el servidor que esta notebook despliega, por lo que es necesario que el servidor de Django de esta notebook esté en ejecución cuando la notebook del cliente se esté ejecutando."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## El paquete *django.http*.\n",
+    "\n",
+    "Este paquete cuenta con herramientas diseñadas para gestionar las peticiones y repuestas más comunes de *HTTP*, incluyendo algunos mensajes de estado.\n",
+    "\n",
+    "En el capítulo [*07_peticiones_y_respuestas.ipynb*](07_peticiones_y_respuestas.ipynb) se describió someramente lo siguiente:\n",
+    "\n",
+    "* El modo en el que los datos de las peticiones (*requests*) enviadas por un cliente son recibidas por el servidor de *Django* y contenidas en objetos instanciados de la clase *django.http.HttpRequest*.\n",
+    "* El modo en el que una función de vista  permite enviar una respuestas (*responses*) a un cliente por medio de una instancia de la clase *django.http.HttpResponse*. \n",
+    "\n",
+    "En este capítulo se explorarán a detalle los recursos del módulo *django.http*, incluyendo más información sobre *django.http.HttpRequest* y *django.http.HttpResponse*.\n",
     "\n",
     "La referencia de este paquete puede ser consultada en https://docs.djangoproject.com/en/2.1/ref/request-response/."
    ]
@@ -31,60 +52,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Los objetos *response*.\n",
-    "\n",
-    "*Django* define a los objetos instanciados de la clase *django.http.HtmlResponse* como los objetos capaces de contener los datos recibidos mediante una petición al servidor.\n",
-    "\n",
-    "En el capítulo [*07_peticiones_y_respuestas.ipynb*](07_peticiones_y_respuestas.ipynb) se estudió de forma \n",
-    "\n"
+    "## Detalles sobre la clase *django.http.HttpRequest*."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Respuestas\n",
+    "### Métodos *django.http.HttpRequest*.\n",
     "\n",
-    "* HttpResponse\n",
-    "* JsonResponse\n",
-    "* FileResponse\n",
-    "* StreamingResponse"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Mensajes serie 300\n",
-    "* HttpResponsePermanentRedirect\n",
-    "* HttpResponseRedirect\n",
+    "#### Métodos informativos.\n",
     "\n",
+    "* *get_host()*, regresa la URL del servidor.\n",
+    "* *get_port()*, regresa el puerto de conexión al servidor.\n",
+    "* *get_full_path()*, regresa la URL incluyendo las peticiones.\n",
+    "* *get_full_path_info()* similar a *get_full_path()*, pero utiliznado el atributo *path_info()*.\n",
+    "* *build_absolute_uri()*\n",
+    "* *is_secure()*\n",
     "\n",
-    "### Mensajes serie 400\n",
-    "* BadHeaderError\n",
-    "* Http404\n",
-    "* HttpResponseBadRequest\n",
-    "* HttpResponseForbidden\n",
-    "* HttpResponseNotAllowed\n",
-    "* HttpResponseNotFound\n",
+    "#### Métodos de XML.\n",
     "\n",
-    "### Mensajes serie 500\n",
+    "* *is_ajax()*\n",
+    "* *read()*\n",
+    "* *readline()*\n",
+    "* *\\_\\_iter\\_\\_()*\n",
     "\n",
-    "* HttpResponseGone\n",
-    "* HttpResponseNotModified\n",
-    "* HttpResponseServerError\n",
-    "* UnreadablePostError\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sintaxis para regresar un mensaje.\n",
+    "#### Métodos de *cookies*.\n",
     "\n",
-    "``` python\n",
-    "HttpResponseServerError('<mensaje>')\n",
-    "``"
+    "* *get_signed_cookie()*"
    ]
   },
   {
@@ -93,7 +88,134 @@
    "source": [
     "## La clase *django.http.QueryDict*.\n",
     "\n",
+    "Los atributos *GET* y *PUT* de la clase *django.http.HtmlRequest* son instancias de la clase *django.http.QueryDict*.\n",
+    "\n",
+    "La clase *django.http.QueryDict* es similar a un objeto tipo *dict*, con la diferencia de que puede contener más de un elemento con el mismo identificador.\n",
+    "\n",
+    "La clase *django.http.QueryDict* es inmutable.\n",
+    "``` python\n",
+    "QueryDict.(query_string=None, mutable=False, encoding=None)\n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Métodos de *django.http.QueryDict*.\n",
+    "Cuenta con los siguientes métodos que son similares a los del tipo *dict*:\n",
+    "* *clear()*\n",
+    "* *pop()*\n",
+    "* *popitem()*\n",
+    "* *setdefault()*\n",
+    "* *update()*\n",
+    "* *items()*\n",
+    "* *values()*\n",
+    "\n",
+    "#### Métodos de gestión.\n",
+    "\n",
+    "* *\\_\\_setitem\\_\\_()*\n",
+    "* *\\_\\_getitem\\_\\_()*\n",
+    "* *\\_\\_contains\\_\\_()*\n",
+    "* *get()*\n",
+    "* *dict()*\n",
+    "* *copy()*\n",
+    "* *urlencode()*\n",
+    "\n",
+    "#### Métodos de listas.\n",
+    "\n",
+    "* *getlist()*\n",
+    "* *setlist()*\n",
+    "* *appendlist()*\n",
+    "* *setlistdefault()*\n",
+    "* *lists()*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Detalles sobre la clase *django.http.HttpResponse*.\n",
+    "\n",
+    "``` python\n",
+    "django.http.HttpResponse(content='', content_type=None, status=200, reason=None, charset=None)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Métodos de *django.http.HttpResponse*.\n",
+    "\n",
+    "#### Métodos de gestión.\n",
+    "\n",
+    "* *\\_\\_setitem\\_\\_()*\n",
+    "* *\\_\\_getitem\\_\\_()*\n",
+    "* *\\_\\_delitem\\_\\_()*\n",
+    "* *has_header()*\n",
+    "* *setdefault()*\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Métodos de gestión de *cookies*.\n",
+    "\n",
+    "* *set_cookie()*\n",
+    "* *set_signed_cookie()*\n",
+    "* *delete_cookie()*\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Otras respuestas de *Django*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Respuestas por tipo.\n",
+    "\n",
+    "* *JsonResponse*.\n",
+    "* *FileResponse*.\n",
+    "* *StreamingResponse*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mensajes de estado.\n",
+    "\n",
+    "####  Mensajes de reenvío (300).\n",
+    "\n",
+    "* *HttpResponseRedirect* (302).\n",
+    "* *HttpResponseNotModified* (304).\n",
+    "* *HttpResponsePermanentRedirect* (308). \n",
+    "\n",
+    "#### Mensajes de error del cliente (400).\n",
+    "* *HttpResponseBadRequest* (400)\n",
+    "* *HttpResponseForbidden* (403)\n",
+    "* *HttpResponseNotFound* (404)\n",
+    "* *HttpResponseNotAllowed* (405)\n",
+    "* *HttpResponseGone* (410)\n",
+    "\n",
+    "#### Mensajes de error del servidor (500).\n",
+    "* *HttpResponseServerError* (500)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Excepciones.\n",
+    "\n",
+    "* *UnreadablePostError*\n",
+    "* *Http404*\n",
+    "* *BadHeaderError*"
    ]
   },
   {
