--- a/13_operaciones_basicas _con_modelos.ipynb
+++ b/13_operaciones_basicas _con_modelos.ipynb
@@ -11,6 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**ADVERTENCIA:**  \n",
+    "\n",
+    "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "En este capítulo se estudiarán los métodos más simples de operación de modelos en una base de datos. \n",
     "\n",
     "https://docs.djangoproject.com/en/2.1/topics/db/queries/"
@@ -20,9 +29,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Operaciones de objetos instanciados de modelos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Instanciamiento de un objeto a partir de un modelo.\n",
+    "\n",
+    "Para instanciar un objeto a partir de un modelo es necesario importar la clase correspondiente, que por lo general se encuentra en el archivo *models.py* de la aplicación correspondiente.\n",
+    "\n",
+    "Es posible asignar los valores a los atributos del objeto instanciado al ingresarlos como argumentos.\n",
+    "\n",
+    "``` \n",
+    "Modelo(<atributos>)\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### El atributo *save()*.\n",
+    "\n",
+    "Cada objeto instanciado de un modelo cuenta con el atributo *save()* el cual permite actualizar  su estado dentro del registro correspondiente en la base de datos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### El atributo *delete()*.\n",
+    "\n",
+    "Cada objeto instanciado de un modelo cuenta con el atributo *delete()*, el cual permite eliminar el registro correspondiente en la base de datos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Atributo de clase *django.db.Model.objects*.\n",
     "\n",
-    "Este artibuto de clase contiene un objeto el cual gestiona las relaciones de todos los objetos instanciados del modelo.\n",
+    "Este artibuto de clase permite gestionar las relaciones de tanto de los objetos instanciados del modelo como de sus registros correspondientes en una base de datos.\n",
     "\n",
     "* Crear objetos y ligarlos a la base de datos. \n",
     "* Realizar consultas con respecto a todos los objetos instanciados.\n",
@@ -41,16 +91,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creación de una API con modelos."
+    "## Creación de una API con modelos.\n",
+    "\n",
+    "A continuación se creará una nueva aplicación llamada *api* dentro del proyecto *tutorial*, la cual tendrá dos *endpoints* definidos en *api/views.py*:\n",
+    "\n",
+    "* La URL *api/carga* ligada a la función *api.views.carga()*, la cual:\n",
+    "    * Cargará un archivo en formato *JSON* y creará una lista de objetos tipo *dict* en el cada campo corresponde a un atributo del modelo *api/model/Alumno*.\n",
+    "    * Instanciará los objetos utilizando los datos de cada objeto *dict*.\n",
+    "    * Guardará los estados de los objetos en la base de datos.\n",
+    "* La URL *api/* ligada a la función *api.views.vista()*, la cual regresará el estado de todos los objetos instanciados del modelo *api.models.Alumnos* contenidos en la base de datos en formato *JSON*.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Archivo fuente.\n",
+    "\n",
     "El archivo *src/13/alumnos.json* contiene lo siguiente:"
    ]
   },
@@ -64,56 +131,6 @@
     " {\"numero_de_cuenta\": 1223, \"al_corriente\": true, \"carrera\": \"Sistemas\", \"nombre\": \"Juan\", \"primer_apellido\": \"Ramos\",  \"segundo_apellido\": \"Breña\", \"promedio\": 8.6, \"semestre\": 9}, \n",
     " {\"numero_de_cuenta\": 1224, \"al_corriente\": true, \"carrera\": \"Derecho\", \"nombre\": \"Mayra Jimena\", \"primer_apellido\": \"Cervantes\",  \"segundo_apellido\": \"Lisama\", \"promedio\": 9.2, \"semestre\": 12}]\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Ejemplo**\n",
-    "\n",
-    "Importar el archivo y ver su contenido como un objeto de Python."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "with open('src/13/alumnos.json', 'tr') as archivo:\n",
-    "    resultado = json.load(archivo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "resultado"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Creación de una nueva aplicación."
    ]
   },
   {
@@ -149,7 +166,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Crear una nueva aplicación llamada *api*"
+    "### Creación de una nueva aplicación."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Crear una nueva aplicación llamada *api*."
    ]
   },
   {
@@ -178,35 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* El archivo  *src/13/tutorial_urls.py* contiene lo siguiente:\n",
-    "\n",
-    "``` python\n",
-    "from django.contrib import admin\n",
-    "from django.urls import include, path\n",
-    "\n",
-    "urlpatterns = [path('admin/', admin.site.urls), \n",
-    "               path('main/', include('main.urls')),\n",
-    "               path('api/', include('api.urls')),\n",
-    "              ]\n",
-    "``` "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "%cp ../src/13/tutorial_urls.py tutorial/urls.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* El archivo *src/13/settings.py* agrga el proyecto *api* a *INSTALLED_APPS*\n",
+    "* El archivo *src/13/settings.py* agrega el proyecto *api* a *INSTALLED_APPS*.\n",
     "\n",
     "``` python\n",
     "INSTALLED_APPS = [\n",
@@ -219,7 +215,9 @@
     "    'main',\n",
     "    'api',\n",
     "]\n",
-    "```"
+    "```\n",
+    "\n",
+    "* El archivo *tutorial/settings.py* será sustituido por *src/13/settings.py*."
    ]
   },
   {
@@ -259,6 +257,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Definición de las URLs en el archivo *tutorial/urls.py*.\n",
+    "\n",
+    "* El archivo  *src/13/tutorial_urls.py* contiene lo siguiente:\n",
+    "\n",
+    "``` python\n",
+    "from django.contrib import admin\n",
+    "from django.urls import include, path\n",
+    "\n",
+    "urlpatterns = [path('admin/', admin.site.urls), \n",
+    "               path('main/', include('main.urls')),\n",
+    "               path('api/', include('api.urls')),\n",
+    "              ]\n",
+    "``` \n",
+    "* El archivo *tutorial/urls.py* será sustituido por *src/13/tutorial_urls.py*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%cp ../src/13/tutorial_urls.py tutorial/urls.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* El archivo *src/13/api_urls.py* contiene lo siguiente:\n",
     "\n",
     "``` python\n",
@@ -285,7 +314,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* El arcivo *src/13/models.py api/models.py* contiene:\n",
+    "### Definición del modelo en el archivo *api/models.py*.\n",
+    "\n",
+    "* El archivo *src/13/models.py* contiene:\n",
     "\n",
     "``` python\n",
     "from django.db import models\n",
@@ -317,6 +348,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Definición de las funciones de vista en el archivo *api/views.py*.\n",
+    "\n",
     "* El archivo *src/13/views.py* contiene las funciones de vista de la API.\n",
     "\n",
     "``` python\n",
@@ -363,6 +396,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inicio del servicio."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -399,9 +439,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://localhost:5000/api/carga\n",
+    "* El *endpoint* http://localhost:5000/api/carga cargará los datos, creará los objetos y poblará la base de datos.\n",
     "\n",
-    "http://localhost:5000/api/\n"
+    "**ADVERTENCIA:** Este *endpoint* sólodebe de usarse una vez. \n",
+    "\n",
+    "* El *endpoint* http://localhost:5000/api/ regresará el estado de todos los objetos en formato *JSON*.\n"
    ]
   },
   {
