--- a/14_servidor_api_rest.ipynb
+++ b/14_servidor_api_rest.ipynb
@@ -45,23 +45,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El archivo *src/14/endpoint_views.py* contiene lo siguiente:\n",
-    "\n",
     "``` python\n",
     "from . import models\n",
     "from django.views.decorators.csrf import csrf_exempt\n",
     "from django.http import JsonResponse, HttpResponseNotFound, HttpResponseBadRequest\n",
     "\n",
-    "campos = {'numero_de_cuenta':int, 'nombre':str, 'primer_apellido':str,\n",
-    "          'segundo_apellido':str, 'carrera':str, 'semestre':int, 'promedio':float,\n",
-    "          'al_corriente':bool}\n",
+    "campos = {'numero_de_cuenta':(int, True), 'nombre':(str, True), 'primer_apellido':(str, True),\n",
+    "          'segundo_apellido':(str, False), 'carrera':(str, True), 'semestre':(int, True),\n",
+    "          'promedio':(float, True), 'al_corriente':(bool, True)}\n",
+    "\n",
+    "carreras = ('Sistemas', 'Derecho', 'Actuaría', 'Arquitectura', 'Administración')\n",
+    "\n",
+    "estructura_base = set(campos)\n",
+    "\n",
+    "\n",
+    "def reglas(valor, campo):\n",
+    "    if campo == \"carrera\" and valor not in carreras:\n",
+    "        return False\n",
+    "    elif campo == \"semestre\" and valor < 1:\n",
+    "        return False\n",
+    "    elif campo == \"promedio\" and (valor < 0 or valor > 10):\n",
+    "        return False\n",
+    "    elif (campo in (\"nombre\", \"primer_apellido\") and (valor == \"\")):\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True         \n",
+    "\n",
+    "    \n",
+    "def valida(dato, campo):\n",
+    "    tipo = campos[campo][0]\n",
+    "    try:\n",
+    "        if tipo is not str:\n",
+    "            valor = eval(dato)\n",
+    "        else:\n",
+    "            valor = dato\n",
+    "        if type(valor) is tipo or (tipo is float and type(dato) is int):\n",
+    "            return reglas(valor, campo)\n",
+    "        else:\n",
+    "            return False\n",
+    "    except:\n",
+    "        return False\n",
+    "\n",
     "\n",
     "@csrf_exempt\n",
     "def clave(request, clave):\n",
     "    '''Función de vista que define un endpoint correspondiente a una clave de 4 dígitos.\n",
     "    Opera con los métodos GET, POST, DELETE.'''\n",
-    "    \n",
     "    # Cuando la petición es GET va a obtener los datos del alumno con la clave correrspondiente.\n",
+    "    # Esta operación se realiza en caso de que exista un objeto con el número de cuenta.\n",
     "    if request.method == \"GET\":\n",
     "        try:\n",
     "            alumno = models.Alumno.objects.get(numero_de_cuenta=clave) \n",
@@ -69,20 +100,9 @@
     "        # La excepción models.Alumno.DoesNotExist se desencadena cuando la búsqueda no arroje un resultado.\n",
     "        except models.Alumno.DoesNotExist:\n",
     "            return HttpResponseNotFound()\n",
-    "    # Cuando la petición es POST va a dar de alta los datos del alumno con la clave correspondiente y los datos enviados.\n",
-    "    if request.method == \"POST\":\n",
-    "        try:\n",
-    "            alumno = models.Alumno.objects.get(numero_de_cuenta=clave) \n",
-    "            return HttpResponseBadRequest()\n",
-    "        except models.Alumno.DoesNotExist:\n",
-    "            registro = request.POST.dict()\n",
-    "            registro[\"numero_de_cuenta\"] = int(clave)\n",
-    "            objeto = models.Alumno()\n",
-    "            for campo in registro:\n",
-    "                setattr(objeto, campo, registro[campo])\n",
-    "            objeto.save()\n",
-    "            return JsonResponse(registro)\n",
+    "        \n",
     "    # Cuando la petición es DELETE el alumno es eliminado de la base de datos.\n",
+    "    # Esta operación se realiza en caso de que exista un objeto con el número de cuenta.\n",
     "    if request.method == \"DELETE\":\n",
     "        try:\n",
     "            alumno = models.Alumno.objects.get(numero_de_cuenta=clave)\n",
@@ -90,6 +110,31 @@
     "            return JsonResponse({'estado': 'eliminado'})   \n",
     "        except models.Alumno.DoesNotExist:\n",
     "            return HttpResponseNotFound()\n",
+    "    # Cuando la petición es POST va a dar de alta los datos del alumno con la clave correspondiente y los datos enviados.\n",
+    "    # Esta operación se realiza en caso de que no exista un objeto con el número de cuenta.\n",
+    "    if request.method == \"POST\":\n",
+    "        try:\n",
+    "            alumno = models.Alumno.objects.get(numero_de_cuenta=clave) \n",
+    "            return HttpResponseBadRequest()\n",
+    "        except models.Alumno.DoesNotExist:\n",
+    "            registro = request.POST.dict()\n",
+    "            registro[\"numero_de_cuenta\"] = clave\n",
+    "            objeto = models.Alumno()\n",
+    "            estructura_registro = set(registro)\n",
+    "            if estructura_registro.issubset(estructura_base):\n",
+    "                for campo in estructura_base:\n",
+    "                    if valida(registro[campo], campo):\n",
+    "                        if campos[campo][0] is not str:\n",
+    "                            valor = eval(registro[campo])\n",
+    "                        else:\n",
+    "                            valor = registro[campo]\n",
+    "                        setattr(objeto, campo, valor)\n",
+    "                    else:\n",
+    "                        return HttpResponseBadRequest()\n",
+    "                objeto.save()\n",
+    "                return JsonResponse(registro)\n",
+    "            else:\n",
+    "                return HttpResponseBadRequest()\n",
     "```\n"
    ]
   },
