--- a/13_operaciones_basicas _con_modelos.ipynb
+++ b/13_operaciones_basicas _con_modelos.ipynb
@@ -86,16 +86,10 @@
    "source": [
     "## Métodos de *django.db.Model.objects*.\n",
     "\n",
-    "* *all()* va a trar un iterador que contiene a todos los objetos instanciados  de la subclase.\n",
-    "* *get()* va a traer a un objeto que cumpla con una expresión lógica. "
+    "* *all()* va a traer un iterador que contiene a todos los objetos instanciados de la subclase de *django.db.Model*.\n",
+    "* *get()* va a traer a un objeto que cumpla con una expresión.\n",
+    "* *filter()* realiza búsquedas medainte expresiones lógicas."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -106,7 +100,7 @@
     "A continuación se creará una nueva aplicación llamada *api* dentro del proyecto *tutorial*, la cual tendrá dos *endpoints* definidos en *api/views.py*:\n",
     "\n",
     "* La URL *api/carga* ligada a la función *api.views.carga()*, la cual:\n",
-    "    * Cargará un archivo en formato *JSON* y creará una lista de objetos tipo *dict* en el cada campo corresponde a un atributo del modelo *api/model/Alumno*.\n",
+    "    * Cargará un archivo en formato *JSON* y creará una lista de objetos tipo *dict* en cada campo corresponde a un atributo del modelo *api/models/Alumno*.\n",
     "    * Instanciará los objetos utilizando los datos de cada objeto *dict*.\n",
     "    * Guardará los estados de los objetos en la base de datos.\n",
     "* La URL *api/* ligada a la función *api.views.vista()*, la cual regresará el estado de todos los objetos instanciados del modelo *api.models.Alumnos* contenidos en la base de datos en formato *JSON*.\n"
@@ -135,11 +129,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/pythonista/py231/tutorial\n"
+     ]
+    }
+   ],
    "source": [
     "%cd tutorial"
    ]
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -173,18 +175,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Crear una nueva aplicación llamada *api*."
+    "* Crear una nueva aplicación llamada *app*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"./manage.py\", line 15, in <module>\n",
+      "    execute_from_command_line(sys.argv)\n",
+      "  File \"/home/oi/pythonista/lib/python3.6/site-packages/django/core/management/__init__.py\", line 381, in execute_from_command_line\n",
+      "    utility.execute()\n",
+      "  File \"/home/oi/pythonista/lib/python3.6/site-packages/django/core/management/__init__.py\", line 357, in execute\n",
+      "    django.setup()\n",
+      "  File \"/home/oi/pythonista/lib/python3.6/site-packages/django/__init__.py\", line 24, in setup\n",
+      "    apps.populate(settings.INSTALLED_APPS)\n",
+      "  File \"/home/oi/pythonista/lib/python3.6/site-packages/django/apps/registry.py\", line 89, in populate\n",
+      "    app_config = AppConfig.create(entry)\n",
+      "  File \"/home/oi/pythonista/lib/python3.6/site-packages/django/apps/config.py\", line 90, in create\n",
+      "    module = import_module(entry)\n",
+      "  File \"/home/oi/pythonista/lib64/python3.6/importlib/__init__.py\", line 126, in import_module\n",
+      "    return _bootstrap._gcd_import(name[level:], package, level)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 994, in _gcd_import\n",
+      "  File \"<frozen importlib._bootstrap>\", line 971, in _find_and_load\n",
+      "  File \"<frozen importlib._bootstrap>\", line 953, in _find_and_load_unlocked\n",
+      "ModuleNotFoundError: No module named 'api'\n"
+     ]
+    }
+   ],
    "source": [
-    "!./manage.py startapp api"
+    "!./manage.py startapp app"
    ]
   },
   {
