--- a/06_estructura_de_una_aplicacion_basica.ipynb
+++ b/06_estructura_de_una_aplicacion_basica.ipynb
@@ -47,9 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tutorial.urls'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import tutorial.tutorial.settings as settings\n",
     "settings.ROOT_URLCONF"
@@ -64,11 +75,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"\"\"tutorial URL Configuration\r\n",
+      "\r\n",
+      "The `urlpatterns` list routes URLs to views. For more information please see:\r\n",
+      "    https://docs.djangoproject.com/en/2.1/topics/http/urls/\r\n",
+      "Examples:\r\n",
+      "Function views\r\n",
+      "    1. Add an import:  from my_app import views\r\n",
+      "    2. Add a URL to urlpatterns:  path('', views.home, name='home')\r\n",
+      "Class-based views\r\n",
+      "    1. Add an import:  from other_app.views import Home\r\n",
+      "    2. Add a URL to urlpatterns:  path('', Home.as_view(), name='home')\r\n",
+      "Including another URLconf\r\n",
+      "    1. Import the include() function: from django.urls import include, path\r\n",
+      "    2. Add a URL to urlpatterns:  path('blog/', include('blog.urls'))\r\n",
+      "\"\"\"\r\n",
+      "from django.contrib import admin\r\n",
+      "from django.urls import path\r\n",
+      "\r\n",
+      "urlpatterns = [\r\n",
+      "    path('admin/', admin.site.urls),\r\n",
+      "]\r\n"
+     ]
+    }
+   ],
    "source": [
     "%cat tutorial/tutorial/urls.py"
    ]
@@ -106,26 +145,6 @@
     "### El paquete *django.urls*.\n",
     "\n",
     "Este paquete contiene funciones que permiten identificar URLs específicas y ligarlas con alguna función."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import django.urls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "help(django.urls)"
    ]
   },
   {
@@ -198,7 +217,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from django.contrib import admin\r\n",
+      "from django.urls import include, path\r\n",
+      "\r\n",
+      "urlpatterns = [path('admin/', admin.site.urls), path('main/', include('main.urls')),]"
+     ]
+    }
+   ],
    "source": [
     "%cat tutorial/tutorial/urls.py"
    ]
@@ -282,7 +312,17 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from django.shortcuts import render\r\n",
+      "\r\n",
+      "# Create your views here.\r\n"
+     ]
+    }
+   ],
    "source": [
     "%cat tutorial/main/views.py"
    ]
@@ -325,7 +365,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from django.http import HttpResponse\r\n",
+      "\r\n",
+      "# Create your views here.\r\n",
+      "def index(request):\r\n",
+      "    return HttpResponse(\"<h1>Hola, mundo.</h1>\")\r\n",
+      "\r\n",
+      "def calificaciones(request):\r\n",
+      "    pass"
+     ]
+    }
+   ],
    "source": [
     "%cat tutorial/main/views.py"
    ]
@@ -341,7 +396,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/pythonista/py231/tutorial\n"
+     ]
+    }
+   ],
    "source": [
     "%cd tutorial"
    ]
@@ -363,7 +426,25 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performing system checks...\n",
+      "\n",
+      "System check identified no issues (0 silenced).\n",
+      "\u001b[31m\n",
+      "You have 15 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.\u001b[0m\n",
+      "\u001b[31mRun 'python manage.py migrate' to apply them.\n",
+      "\u001b[0m\n",
+      "February 20, 2019 - 18:55:33\n",
+      "Django version 2.1.7, using settings 'tutorial.settings'\n",
+      "Starting development server at http://0.0.0.0:5000/\n",
+      "Quit the server with CONTROL-C.\n"
+     ]
+    }
+   ],
    "source": [
     "! ./manage.py runserver 0.0.0.0:5000"
    ]
