--- a/12a_operaciones_con_http.ipynb
+++ b/12a_operaciones_con_http.ipynb
@@ -224,15 +224,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd .."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%cp src/12/urls.py tutorial/main/urls.py "
    ]
   },
@@ -242,7 +233,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%cat tutorial/main/urls.py "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%cp src/12/views.py tutorial/main/views.py "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cat tutorial/main/urls.py "
    ]
   },
   {
@@ -276,7 +285,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
