--- a/13_operaciones_basicas _con_modelos.ipynb
+++ b/13_operaciones_basicas _con_modelos.ipynb
@@ -129,19 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/opt/pythonista/py231/tutorial\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd tutorial"
    ]
@@ -155,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -175,44 +167,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Crear una nueva aplicación llamada *app*."
+    "* Crear una nueva aplicación llamada *api*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"./manage.py\", line 15, in <module>\n",
-      "    execute_from_command_line(sys.argv)\n",
-      "  File \"/home/oi/pythonista/lib/python3.6/site-packages/django/core/management/__init__.py\", line 381, in execute_from_command_line\n",
-      "    utility.execute()\n",
-      "  File \"/home/oi/pythonista/lib/python3.6/site-packages/django/core/management/__init__.py\", line 357, in execute\n",
-      "    django.setup()\n",
-      "  File \"/home/oi/pythonista/lib/python3.6/site-packages/django/__init__.py\", line 24, in setup\n",
-      "    apps.populate(settings.INSTALLED_APPS)\n",
-      "  File \"/home/oi/pythonista/lib/python3.6/site-packages/django/apps/registry.py\", line 89, in populate\n",
-      "    app_config = AppConfig.create(entry)\n",
-      "  File \"/home/oi/pythonista/lib/python3.6/site-packages/django/apps/config.py\", line 90, in create\n",
-      "    module = import_module(entry)\n",
-      "  File \"/home/oi/pythonista/lib64/python3.6/importlib/__init__.py\", line 126, in import_module\n",
-      "    return _bootstrap._gcd_import(name[level:], package, level)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 994, in _gcd_import\n",
-      "  File \"<frozen importlib._bootstrap>\", line 971, in _find_and_load\n",
-      "  File \"<frozen importlib._bootstrap>\", line 953, in _find_and_load_unlocked\n",
-      "ModuleNotFoundError: No module named 'api'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!./manage.py startapp app"
+    "!./manage.py startapp api"
    ]
   },
   {
